--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <label class="control-btn file-label" for="image-capturer">Tirar Foto
                 <input type="file" id="image-capturer" accept="image/*" capture="environment" aria-hidden="true">
             </label>
-            <button class="control-btn" id="export-data-btn">Exportar Dados</button>
+            <button class="control-btn" id="export-excel-btn">Exportar para Excel</button>
         </section>
 
         <section class="settings-panel">
@@ -97,8 +97,8 @@
                     <tr>
                         <th>Cor de Referência</th>
                         <th>Cor Analisada</th>
-                        <th>Diferença (ΔE)</th>
-                        <th>Interpretação</th>
+                        <th>Dif. (ΔE)</th>
+                        <th>Interp.</th>
                         <th>Ação</th>
                     </tr>
                 </thead>
@@ -106,6 +106,11 @@
             </table>
         </section>
     </main>
+
+    <!-- Bibliotecas para exportação -->
+    <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
+    <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
+    <script src="https://unpkg.com/jspdf-autotable@latest/dist/jspdf.autotable.min.js"></script>
 
     <script src="app.js" defer></script>
 </body>
