--- a/history.html
+++ b/history.html
@@ -18,6 +18,7 @@
         <section class="controls">
             <a href="index.html" class="control-btn">Voltar ao Analisador</a>
             <button class="control-btn" id="export-excel-btn">Exportar para Excel</button>
+            <button id="logout-btn" class="control-btn danger-btn">Sair</button>
         </section>
 
         <section class="analysis-history-container">
@@ -46,5 +47,13 @@
     ></script>
     <script src="shared.js" defer></script>
     <script src="history.js" defer></script>
+    <script>
+        // Lógica de Logout
+        document.getElementById('logout-btn').addEventListener('click', () => {
+            sessionStorage.removeItem('isLoggedIn');
+            sessionStorage.removeItem('currentUser');
+            window.location.href = 'login.html';
+        });
+    </script>
 </body>
 </html>
