--- a/login.html
+++ b/login.html
@@ -16,11 +16,11 @@
             <h2>Login</h2>
             <div class="form-group">
                 <label for="login-email">Email</label>
-                <input type="email" id="login-email" required>
+                <input type="email" id="login-email" required autocomplete="email">
             </div>
             <div class="form-group">
                 <label for="login-password">Senha</label>
-                <input type="password" id="login-password" required>
+                <input type="password" id="login-password" required autocomplete="current-password">
             </div>
             <button type="submit" class="control-btn auth-btn">Entrar</button>
             <div class="form-links">
@@ -34,15 +34,15 @@
             <h2>Cadastro</h2>
             <div class="form-group">
                 <label for="register-name">Nome</label>
-                <input type="text" id="register-name" required>
+                <input type="text" id="register-name" required autocomplete="name">
             </div>
             <div class="form-group">
                 <label for="register-email">Email</label>
-                <input type="email" id="register-email" required>
+                <input type="email" id="register-email" required autocomplete="email">
             </div>
             <div class="form-group">
                 <label for="register-password">Senha</label>
-                <input type="password" id="register-password" required>
+                <input type="password" id="register-password" required autocomplete="new-password">
             </div>
             <button type="submit" class="control-btn auth-btn">Cadastrar</button>
             <div class="form-links">
@@ -56,7 +56,7 @@
             <p>Digite seu e-mail e enviaremos um link para redefinir sua senha.</p>
             <div class="form-group">
                 <label for="forgot-email">Email</label>
-                <input type="email" id="forgot-email" required>
+                <input type="email" id="forgot-email" required autocomplete="email">
             </div>
             <button type="submit" class="control-btn auth-btn">Enviar Link</button>
             <div class="form-links">
@@ -64,6 +64,7 @@
             </div>
         </form>
     </main>
+    <script src="shared.js" defer></script>
     <script src="login.js" defer></script>
 </body>
 </html>
