--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
         <h1>Analisador de Cores</h1>
         
         <section class="controls">
-            <label class="control-btn file-label" for="image-uploader">Carregar Imagem
-                <input type="file" id="image-uploader" accept="image/*" aria-hidden="true">
+            <label class="control-btn file-label" for="image-uploader">
+                <span class="visually-hidden">Carregar Imagem</span>
+                <input type="file" id="image-uploader" accept="image/*" class="file-input" aria-label="Selecione uma imagem para análise">
             </label>
-            <label class="control-btn file-label" for="image-capturer">Tirar Foto
-                <input type="file" id="image-capturer" accept="image/*" capture="environment" aria-hidden="true">
+            <label class="control-btn file-label" for="image-capturer">
+                <span class="visually-hidden">Tirar Foto</span>
+                <input type="file" id="image-capturer" accept="image/*" capture="environment" class="file-input" aria-label="Tire uma foto para análise">
             </label>
             <a href="history.html" class="control-btn">Ver Histórico</a>
             <button id="logout-btn" class="control-btn danger-btn">Sair</button>
@@ -95,13 +97,20 @@
             <p>Escala de Luminosidade (L* no espaço Lab)</p>
             <div class="ruler-wrapper">
                 <div id="color-ruler" class="color-ruler"></div>
-                <div id="ref-color-marker"><span>Ref</span></div>
-                <div id="color-marker"><span>Sel</span></div>
+                <div id="ref-color-marker" class="ruler-marker ref-marker"><span>Ref</span></div>
+                <div id="color-marker" class="ruler-marker sel-marker"><span>Sel</span></div>
             </div>
             <div class="ruler-labels">
                 <span>Escuro (L*=0)</span>
                 <span>Médio (L*=50)</span>
                 <span>Claro (L*=100)</span>
+            </div>
+
+            <p style="margin-top: 1.5rem; margin-bottom: 0.5rem;">Luminosidade da Cor de Referência</p>
+            <div class="ruler-wrapper">
+                <div id="color-ruler-ref" class="color-ruler"></div>
+                <div id="ref-color-marker-2" class="ruler-marker ref-marker"><span>Ref</span></div>
+                <div id="sel-color-marker-2" class="ruler-marker sel-marker"><span>Sel</span></div>
             </div>
         </section>
 
