--- a/login.html
+++ b/login.html
@@ -15,8 +15,8 @@
         <form id="login-form" class="auth-form active-form">
             <h2>Login</h2>
             <div class="form-group">
-                <label for="login-email">Email</label>
-                <input type="email" id="login-email" required autocomplete="email">
+                <label for="login-username">Usuário</label>
+                <input type="text" id="login-username" required autocomplete="username">
             </div>
             <div class="form-group">
                 <label for="login-password">Senha</label>
@@ -37,13 +37,14 @@
                 <input type="text" id="register-name" required autocomplete="name">
             </div>
             <div class="form-group">
-                <label for="register-email">Email</label>
-                <input type="email" id="register-email" required autocomplete="email">
+                <label for="register-username">Usuário</label>
+                <input type="text" id="register-username" required autocomplete="username" minlength="3">
             </div>
             <div class="form-group">
                 <label for="register-password">Senha</label>
-                <input type="password" id="register-password" required autocomplete="new-password">
+                <input type="password" id="register-password" required autocomplete="new-password" minlength="6">
             </div>
+            <p class="form-note">Para criar o administrador do sistema, use o nome de usuário <strong>master</strong> no primeiro cadastro.</p>
             <button type="submit" class="control-btn auth-btn">Cadastrar</button>
             <div class="form-links">
                 <a href="#" id="show-login-from-register">Já tem uma conta? Faça login</a>
@@ -52,15 +53,37 @@
 
         <!-- Formulário de Recuperação de Senha -->
         <form id="forgot-password-form" class="auth-form">
-            <h2>Recuperar Senha</h2>
-            <p>Digite seu e-mail e enviaremos um link para redefinir sua senha.</p>
+            <h2>Acesso de Administrador</h2>
+            <p>Para redefinir a senha de um usuário, entre com suas credenciais de administrador.</p>
             <div class="form-group">
-                <label for="forgot-email">Email</label>
-                <input type="email" id="forgot-email" required autocomplete="email">
+                <label for="master-username">Usuário Master</label>
+                <input type="text" id="master-username" required autocomplete="username">
             </div>
-            <button type="submit" class="control-btn auth-btn">Enviar Link</button>
+            <div class="form-group">
+                <label for="master-password">Senha Master</label>
+                <input type="password" id="master-password" required autocomplete="current-password">
+            </div>
+            <button type="submit" class="control-btn auth-btn">Acessar</button>
             <div class="form-links">
                 <a href="#" id="show-login-from-forgot">Voltar para o Login</a>
+            </div>
+        </form>
+
+        <!-- Formulário de Reset pelo Master -->
+        <form id="master-reset-form" class="auth-form">
+            <h2>Redefinir Senha de Usuário</h2>
+            <p>Digite o nome do usuário e a nova senha.</p>
+            <div class="form-group">
+                <label for="user-to-reset">Nome de Usuário a Redefinir</label>
+                <input type="text" id="user-to-reset" required>
+            </div>
+            <div class="form-group">
+                <label for="new-password-for-user">Nova Senha</label>
+                <input type="password" id="new-password-for-user" required minlength="6">
+            </div>
+            <button type="submit" class="control-btn auth-btn">Redefinir Senha</button>
+            <div class="form-links">
+                <a href="#" id="show-login-from-master-reset">Voltar para o Login</a>
             </div>
         </form>
     </main>
