retirada de referencia de luminosidade

--- a/index.html
+++ b/index.html
@@ -89,23 +89,16 @@
         </div>
 
         <section class="color-ruler-container">
-            <p>Escala de Luminosidade (L* no espaço Lab)</p>
+            <p>Luminosidade da Cor de Referência</p>
             <div class="ruler-wrapper">
-                <div id="color-ruler" class="color-ruler"></div>
-                <div id="ref-color-marker" class="ruler-marker ref-marker"><span>Ref</span></div>
-                <div id="color-marker" class="ruler-marker sel-marker"><span>Sel</span></div>
+                <div id="color-ruler-ref" class="color-ruler"></div>
+                <div id="ref-color-marker-2" class="ruler-marker ref-marker"><span>Ref</span></div>
+                <div id="sel-color-marker-2" class="ruler-marker sel-marker"><span>Sel</span></div>
             </div>
             <div class="ruler-labels">
                 <span>Escuro (L*=0)</span>
                 <span>Médio (L*=50)</span>
                 <span>Claro (L*=100)</span>
-            </div>
-
-            <p style="margin-top: 1.5rem; margin-bottom: 0.5rem;">Luminosidade da Cor de Referência</p>
-            <div class="ruler-wrapper">
-                <div id="color-ruler-ref" class="color-ruler"></div>
-                <div id="ref-color-marker-2" class="ruler-marker ref-marker"><span>Ref</span></div>
-                <div id="sel-color-marker-2" class="ruler-marker sel-marker"><span>Sel</span></div>
             </div>
         </section>
 
