retirada de referencia bug

--- a/index.html
+++ b/index.html
@@ -87,6 +87,20 @@
             </div>
             
         </div>
+        //retirar essa seção depois
+        <section style="display: none;" class="color-ruler-container">
+            <p>Luminosidade (L*)</p>
+            <div class="ruler-wrapper">
+                <div id="color-ruler" class="color-ruler"></div>
+                <div id="ref-color-marker" class="ruler-marker ref-marker"><span>Ref</span></div>
+                <div id="color-marker" class="ruler-marker sel-marker"><span>Sel</span></div>
+            </div>
+            <div class="ruler-labels">
+                <span>Escuro (L*=0)</span>
+                <span>Médio (L*=50)</span>
+                <span>Claro (L*=100)</span>
+            </div>
+        </section>
 
         <section class="color-ruler-container">
             <p>Luminosidade da Cor de Referência</p>
